Change log for zeit.web
=======================

PREDEPLOY
---------

- Nothing

POSTDEPLOY
----------

- Remove `location /robots.txt` from nginx config


3.165 (unreleased)
------------------

- BUG-906: Bring back duration on video teasers

- BUG-946: Adjust small sharing buttons in ZEIT Arbeit


3.164 (2018-06-26)
------------------

- BUG-934: Update author contact FB Icon width (mobile)

- BUG-942: Show current liveblog status in buzz-box and buzz-board teasers

- FIX: Use correct date range syntax for ES fulltext query

- TMS-236: Support date-based pagination of sitemaps


3.163 (2018-06-22)
------------------

- ZON-4663: WM Ticker Tweaks (Use Websockets, Link Styling)

- ZON-4705: Add ZMO seriespage

- FIX: Use only fragment identifier in TOC links for FAQ pages

- MAINT: Serve different robots.txt content according to host header


3.162 (2018-06-21)
------------------

- TMS-235: Support link objects in sitemaps

- ZON-4739: Small share-buttons + pocket-button

- ZON-4740: Add google optimize to settings

- BUG-943: Enable Follow-Button in App

- FIX: Handle no comments in author comments area gracefully

- MAINT: Validate query parameters in "load next" areas


3.161 (2018-06-18)
------------------

- ZON-4747: WM-Ticker: Update more link (text & style)

- ZON-4746: WM Ticker Links & WS Update

- MAINT: Remove `ssl_asset_host` remnants

- TMS-231: Update to changed CP API by finally removing `ICP2009` support

- TMS-218: Unify series.xml structure regarding video series

- BUG-931: Implement equality for LazyProxy, so that hide_dupes works with them


3.160.3 (2018-06-14)
--------------------

- MAINT: Update test (don't cache test assets)


3.160.2 (2018-06-14)
--------------------

- ZON-4663: WM Ticker Updates


3.160.1 (2018-06-13)
--------------------

- HOTFIX: WM Ticker: Check presence of data-attributes


3.160 (2018-06-13)
------------------

- ZON-4732: playsinline Tag for Videos

- ZON-4663: WM Ticker Tweaks
